# active-directory-security-research-toolkit

./: .gitignore  LICENSE  README.md  ad_schema_enhanced.json  pyproject.toml
docs/: DEVELOPMENT.md  USER_GUIDE.md
scripts/: __init__.py  parse_ms_ada_pdfs.py
src/ad_schema_tool/: __init__.py  cli.py
