[project]
name = "security-research-toolkit"
version = "0.1.0"
description = "Security research toolkit for Active Directory schema analysis and attribute mapping"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.26.3",
]

[project.scripts]
ad-schema-tool = "ad_schema_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ad_schema_tool", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
